# feeder

./: .editorconfig  .gitattributes  .travis.yml  Cargo.toml  Justfile  README.md  Rocket.toml
.github/workflows/: rust.yml
changelog/: 1.0.0.txt  1.0.1.txt  1.0.2.txt  1.0.3.txt  1.0.4.txt
ci/: install_github_release.sh  install_just.sh  static_binary_builder.sh  test_docker.sh
config/: .env  Rocket.toml
docker/: Dockerfile  Dockerfile-dev
scripts/: binary-release.sh  bump_cargo_version.sh  bump_release_dockerfile_version.sh  docker-image-release.sh  release.sh
src/: main.rs
src/common/: error.rs  errors.rs  mod.rs  report.rs
src/db/: feed.rs  feed_item.rs  feed_item_wrapper.rs  feed_wrapper.rs  mod.rs  model.rs  mongo.rs
src/db/wrappers/: mod.rs  mongo.rs
src/router/: catchers.rs  fairings.rs  feed.rs  feed_items.rs  feeds.rs  mod.rs
