[package]
name = "feeder"
version = "0.1.0"
authors = ["cezarmathe <cezarmathe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket api framework
rocket = "0.4.2"

# json, objects and data
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
uuid = { version = "0.7", features = ["serde", "v3", "v4"] }
rust-crypto = "0.2.36"

# db
mongodb = "0.3.11"
bson = "0.14.0"

# logging
simple-logging = "2.0.2"
log = "0.4.8"

#lazy statics
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
