[package]
name = "feeder"
version = "1.0.1"
authors = ["cezarmathe <cezarmathe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mongo"]

mongo = ["mongodb", "wither", "wither_derive", "bson"]

[dependencies]
#rocket api framework
rocket = "0.4.2"

# json, objects and data
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
uuid = { version = "0.7", features = ["serde", "v4"] }
rust-crypto = "0.2.36"

# logging
simple-logging = "2.0.2"
log = "0.4.8"

# lazy statics
lazy_static = "1.4.0"

# errors
thiserror = "1.0"

# optional dependencies
mongodb = {version = "0.3.11", optional = true}
wither = {version = "0.8.0", optional = true}
wither_derive = {version = "0.8.0", optional = true}
bson = {version = "0.14.0", optional = true}

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "mongodb_pool"]
